appId: com.dkanai.ios-practice-swiftui
name: TODO create and filter

---
- runScript: myScript.js
- launchApp:
    clearState: true
- tapOn: "create todo"
- inputText: "clean room"
- tapOn: "submit"
- assertVisible: "clean room"
- tapOn: "create todo"
- inputText: "clean garden"
- tapOn: "submit"
- assertVisible: "clean garden"
- tapOn: "filter todo"
- inputText: "garden"
- assertVisible: "clean garden"
- assertNotVisible: "clean room"
